--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <h1>The future is here</h1>
 <p>Modern watches are over designed and over priced</p>
 
+<h2>Not Anymore!</h2>
+<p>We at Jewelry of The Future are a new startup bussiness focused around creating and selling high quality, affordable and contempory deisgned watches</p>  
+
 </body>
 </html>
