--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>Modern watches are over designed and over priced</p>
 
 <h2>Not Anymore!</h2>
-<p>We at Jewelry of The Future are a new startup bussiness focused around creating and selling high quality, affordable and contempory deisgned watches</p>  
+<p>We at Jewelry of The Future are a new startup bussiness focused around creating and selling high quality, affordable and contempory designed watches</p>  
 
 </body>
 </html>
