--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Jewelry of The Future</title>
+<link rel="stylesheet" href="about.html">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
