Add update to index and about pages, incraesed margins, text size and border sized

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <title>Jewelry of The Future</title>
-<a <link rel="stylesheet" href="about.html">ABOUT</a>
+<div class="Top_buttons">
+    <a <link rel="stylesheet" href="index.html">HOME</a>
+    <a <link rel="stylesheet" href="about.html">ABOUT</a>
+    <a <link rel="stylesheet" href="gallary.html">GALLARY</a>
+    </div>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
