Add images to all pages, centered images and changed size, add slideshow to gallary page with basic images. Add more information in the about page, add image of townsville site of the bussiness

--- a/about.html
+++ b/about.html
@@ -18,5 +18,7 @@
 <p>Our watches will have a 'core' unit which will contain the battery and electronics, 
     thie 'core' unit will be covered with a interchangable and customizable 'face' module
 </p>
+<p>Located in Townsville we're a locally owned and run</p>
+<img src="Aerial_view_of_Townsville.jpg" class="centerimage">
 </body>
 </html>
