--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="center">
+    <h1>The future is here</h1>
 
-<h1>The future is here</h1>
-<p>Modern watches are over designed and over priced</p>
+    <p>Modern watches are over designed and over priced</p>
+</div>
+<img src="34553-original.jpg" alt = "Pretty cool future watch" class="centerimage">
+<div class="center">
+    <h2>Not Anymore!</h2>
 
-<h2>Not Anymore!</h2>
-<p>We at Jewelry of The Future are a new startup bussiness focused around creating and selling high quality, affordable and contempory designed watches</p>  
-
+    <p>We at Jewelry of The Future are a new startup bussiness focused around creating and selling high quality, affordable and contempory designed watches</p>  
+</div>
 </body>
 </html>
